--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,9 +6,7 @@
             Knative
         </a>
         |
-        <a href="https://github.com/mchmarny/knative-ws-example">
-            This sample src
-        </a>
+        <a href="https://github.com/mchmarny/tview">Source</a>
     </p>
 </div>
 
