--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
 <head>
     <title>MyEvents - Knative Cloud Events Gateway and Viewer</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Knative WebSocket Example">
+    <meta name="description" content="Knative Eventing Demo">
     <meta name="keywords" content="events, knative, websocket, golang, google">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/img/favicon.ico" rel="shortcut icon" />
@@ -23,9 +23,8 @@
                 <img src="static/img/knative-logo.png" />
             </div>
             <div id="page-header-title">
-                Knative WebSocket Example
+                Twitter <a class="hashtag" href="https://twitter.com/hashtag/KnativeNextDemo">#KnativeNextDemo</a>
             </div>
         </div>
-
 
         {{end}}
