Fixed ui, docker

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,6 +8,9 @@
         |
         <a href="https://github.com/mchmarny/tview">Source</a>
     </p>
+    <p>
+        {{ .version }}
+    </p>
 </div>
 
 </div>
