--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>MyEvents - Knative Cloud Events Gateway and Viewer</title>
+    <title>tevents - Knative Cloud Events Gateway and Viewer</title>
     <meta charset="UTF-8">
     <meta name="description" content="Knative Eventing Demo">
     <meta name="keywords" content="events, knative, websocket, golang, google">
