Parameter for topic

--- a/templates/header.html
+++ b/templates/header.html
@@ -23,7 +23,7 @@
                 <img src="static/img/knative-logo.png" />
             </div>
             <div id="page-header-title">
-                Twitter <a class="hashtag" href="https://twitter.com/hashtag/KnativeNextDemo">#KnativeNextDemo</a>
+                Twitter: <a class="hashtag" href="https://twitter.com/search?q={{ .search }}">{{ .search }}</a>
             </div>
         </div>
 
